force-app/main/default/objects/CampaignMember/fields/Account_Household__c.field-meta.xml
<CustomField>
    <fullName>Account_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account / Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>