force-app/main/default/objects/CampaignMember/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <formula>Contact.Account.SFID_18__c</formula>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>