force-app/main/default/objects/CampaignMember/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Temporary - Delete Me!</description>
    <formula>Contact.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>