force-app/main/default/objects/CampaignMember/fields/Account_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Account_Salutation__c</fullName>
    <description>Salutation/Site from Account</description>
    <formula>Contact.Account.Site</formula>
    <label>Account Salutation</label>
    <type>Text</type>
</CustomField>