force-app/main/default/objects/CampaignMember/fields/Action_Formula__c.field-meta.xml
<CustomField>
    <fullName>Action_Formula__c</fullName>
    <formula>&quot;/apex/gblite__Grid?gname=Contacts Opptys and Tasks&amp;fpf=Contact.Id&amp;fpv=&quot;+ ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Formula</label>
    <type>Text</type>
</CustomField>