force-app/main/default/objects/CampaignMember/fields/Advisor_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Advisor_User_ID__c</fullName>
    <description>Temporary - Delete Me!</description>
    <formula>Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Advisor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor User ID</label>
    <type>Text</type>
</CustomField>