force-app/main/default/objects/CampaignMember/fields/Att__c.field-meta.xml
<CustomField>
    <fullName>Att__c</fullName>
    <formula>IF( AND(Event__r.End_Date__c &lt; TODAY(), TEXT(Status) = &apos;A - Attended&apos;), 1, IF (AND(Event__r.End_Date__c  &gt;= TODAY(),  TEXT(Status) = &apos;C - Confirmed&apos;),1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Att</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>