force-app/main/default/objects/CampaignMember/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <formula>IF( AND(Event__r.End_Date__c &lt; TODAY(), TEXT(Status) = &apos;A - Attended&apos;), TRUE, IF (AND(Event__r.End_Date__c  &gt;= TODAY(),  TEXT(Status) = &apos;C - Confirmed&apos;),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance</label>
    <type>Checkbox</type>
</CustomField>