force-app/main/default/objects/CampaignMember/fields/Calls_Notes__c.field-meta.xml
<CustomField>
    <fullName>Calls_Notes__c</fullName>
    <label>Call Notes</label>
    <type>TextArea</type>
</CustomField>