force-app/main/default/objects/CampaignMember/fields/Cancel_Week__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Week__c</fullName>
    <formula>IF(ISBLANK( Canceled_Date__c ),NULL,(Campaign.StartDate - Canceled_Date__c )/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>