force-app/main/default/objects/CampaignMember/fields/Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Date__c</fullName>
    <label>Canceled Date</label>
    <type>Date</type>
</CustomField>