force-app/main/default/objects/CampaignMember/fields/Church_Priority__c.field-meta.xml
<CustomField>
    <fullName>Church_Priority__c</fullName>
    <label>Church Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>