force-app/main/default/objects/CampaignMember/fields/Church_State__c.field-meta.xml
<CustomField>
    <fullName>Church_State__c</fullName>
    <label>Church State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>