force-app/main/default/objects/CampaignMember/fields/CM_Link__c.field-meta.xml
<CustomField>
    <fullName>CM_Link__c</fullName>
    <formula>IF(ISBLANK( Account_Household__c ),&quot;&quot;,HYPERLINK(   &quot;/&quot; &amp;  Id ,    &quot;Campaign Member&quot;,   &quot;_self&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Link</label>
    <type>Text</type>
</CustomField>