force-app/main/default/objects/CampaignMember/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Activity History Notes</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>