force-app/main/default/objects/CampaignMember/fields/Completed_Calls__c.field-meta.xml
<CustomField>
    <fullName>Completed_Calls__c</fullName>
    <formula>CASE( Status ,
&quot;Cc&quot;, 1,
&quot;MsgCc&quot;, 1,
&quot;MsgMsgCc&quot;, 1,
&quot;MsgMsgEc&quot;, 1,
&quot;MsgMsgNc&quot;, 1,
&quot;NC&quot;, 1, 
&quot;TC&quot;, 1,
0)</formula>
    <label>Completed Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>