force-app/main/default/objects/CampaignMember/fields/Contact_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Contact_Do_Not_Call__c</fullName>
    <formula>IF( OR(Contact.DoNotCall = TRUE, Contact.Do_Not_Call__c = TRUE),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Do Not Call</label>
    <type>Checkbox</type>
</CustomField>