force-app/main/default/objects/CampaignMember/fields/Contact_Do_Not_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Do_Not_Text__c</fullName>
    <formula>Contact.Do_Not_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Do Not Text</label>
    <type>Checkbox</type>
</CustomField>