force-app/main/default/objects/CampaignMember/fields/Contact_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Opt_Out__c</fullName>
    <formula>Contact.All_Emails_Opt_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>