force-app/main/default/objects/CampaignMember/fields/Contact_Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Contact_Event_Area__c</fullName>
    <formula>Contact.Account.Event_Area_Code_LU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Event Area</label>
    <type>Text</type>
</CustomField>