force-app/main/default/objects/CampaignMember/fields/Contact_Group__c.field-meta.xml
<CustomField>
    <fullName>Contact_Group__c</fullName>
    <formula>Contact.CV_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Group</label>
    <type>Text</type>
</CustomField>