force-app/main/default/objects/CampaignMember/fields/Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18__c</fullName>
    <description>Temporary - Delete Me!</description>
    <formula>Contact.Contact_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (18)</label>
    <type>Text</type>
</CustomField>