force-app/main/default/objects/CampaignMember/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <formula>Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>