force-app/main/default/objects/CampaignMember/fields/ContactMDM__c.field-meta.xml
<CustomField>
    <fullName>ContactMDM__c</fullName>
    <formula>Contact.MDM_Acquisition_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactMDM</label>
    <type>DateTime</type>
</CustomField>