force-app/main/default/objects/CampaignMember/fields/CV_Attendee__c.field-meta.xml
<CustomField>
    <fullName>CV_Attendee__c</fullName>
    <description>Temporary field used to get the Group Name on the Campaign Member during the Cvent Go Live process.  Can be deleted after all &quot;In Progress&quot; Cvent events are moved to Salesforce.</description>
    <label>CV Attendee #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>