force-app/main/default/objects/CampaignMember/fields/CV_Company__c.field-meta.xml
<CustomField>
    <fullName>CV_Company__c</fullName>
    <label>CV Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>