force-app/main/default/objects/CampaignMember/fields/CV_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>CV_Confirmation__c</fullName>
    <externalId>true</externalId>
    <label>CV Confirmation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>