force-app/main/default/objects/CampaignMember/fields/CV_Group_Cord__c.field-meta.xml
<CustomField>
    <fullName>CV_Group_Cord__c</fullName>
    <label>CV Group Coordinator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>