force-app/main/default/objects/CampaignMember/fields/CV_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>CV_Group_Name__c</fullName>
    <description>Comes from Attendee Temp Record matched on confirmation Number</description>
    <label>CV Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>