force-app/main/default/objects/CampaignMember/fields/CV_Is_Guest__c.field-meta.xml
<CustomField>
    <fullName>CV_Is_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped in integration</description>
    <label>CV Is Guest</label>
    <type>Checkbox</type>
</CustomField>