force-app/main/default/objects/CampaignMember/fields/CV_Paid__c.field-meta.xml
<CustomField>
    <fullName>CV_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CV Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>