force-app/main/default/objects/CampaignMember/fields/CYE_Mailing_del__c.field-meta.xml
<CustomField>
    <fullName>CYE_Mailing_del__c</fullName>
    <label>CYE Mailing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Letter w/No Ask</fullName>
            </value>
            <value>
                <fullName>No CYE Letter</fullName>
            </value>
            <value>
                <fullName>YE ASK ML</fullName>
            </value>
            <value>
                <fullName>YE ASK UL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>