force-app/main/default/objects/CampaignMember/fields/DCA_Id__c.field-meta.xml
<CustomField>
    <fullName>DCA_Id__c</fullName>
    <label>DCA Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>