force-app/main/default/objects/CampaignMember/fields/Donor_Caseload__c.field-meta.xml
<CustomField>
    <fullName>Donor_Caseload__c</fullName>
    <formula>Account_Household__r.Donor_Caseload_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Caseload</label>
    <type>Text</type>
</CustomField>