force-app/main/default/objects/CampaignMember/fields/Donor_Classification__c.field-meta.xml
<CustomField>
    <fullName>Donor_Classification__c</fullName>
    <formula>TEXT(Contact.Account.Donor_Classification_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Classification</label>
    <type>Text</type>
</CustomField>