force-app/main/default/objects/CampaignMember/fields/Donor_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Donor_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Confidential</label>
    <type>Checkbox</type>
</CustomField>