force-app/main/default/objects/CampaignMember/fields/Email_Given_On_Website__c.field-meta.xml
<CustomField>
    <fullName>Email_Given_On_Website__c</fullName>
    <label>Email Given On Website</label>
    <length>40</length>
    <type>Text</type>
</CustomField>