force-app/main/default/objects/CampaignMember/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <formula>Campaign.Event_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Code</label>
    <type>Text</type>
</CustomField>