force-app/main/default/objects/CampaignMember/fields/FL_Donation_Code__c.field-meta.xml
<CustomField>
    <fullName>FL_Donation_Code__c</fullName>
    <formula>Campaign.FL_Donation_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FL Donation Code</label>
    <type>Text</type>
</CustomField>