force-app/main/default/objects/CampaignMember/fields/GC_Amount__c.field-meta.xml
<CustomField>
    <fullName>GC_Amount__c</fullName>
    <label>GC Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>