force-app/main/default/objects/CampaignMember/fields/GC_Priority__c.field-meta.xml
<CustomField>
    <fullName>GC_Priority__c</fullName>
    <label>GC Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>