force-app/main/default/objects/CampaignMember/fields/GC_Product__c.field-meta.xml
<CustomField>
    <fullName>GC_Product__c</fullName>
    <label>GC Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>