force-app/main/default/objects/CampaignMember/fields/Getaway_Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Getaway_Attendee_Type__c</fullName>
    <label>Getaway Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>