force-app/main/default/objects/CampaignMember/fields/Giving_Last__c.field-meta.xml
<CustomField>
    <fullName>Giving_Last__c</fullName>
    <formula>Account_Household__r.Giving_Last__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giving Last</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>