force-app/main/default/objects/CampaignMember/fields/Global_Country__c.field-meta.xml
<CustomField>
    <fullName>Global_Country__c</fullName>
    <label>Global Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>