force-app/main/default/objects/CampaignMember/fields/GM_Details__c.field-meta.xml
<CustomField>
    <fullName>GM_Details__c</fullName>
    <inlineHelpText>For data migration only.</inlineHelpText>
    <label>GM Details</label>
    <type>TextArea</type>
</CustomField>