force-app/main/default/objects/CampaignMember/fields/GMID__c.field-meta.xml
<CustomField>
    <fullName>GMID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>For data migration only. GUID from GM.</inlineHelpText>
    <label>GMID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>