force-app/main/default/objects/CampaignMember/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name-DEPRECATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>