force-app/main/default/objects/CampaignMember/fields/Groupname__c.field-meta.xml
<CustomField>
    <fullName>Groupname__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Group Name Lookup field implemented in conjunction with Cvent Connector Go Live.</description>
    <label>Groupname</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Group__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Cvent Event Registrations</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>