force-app/main/default/objects/CampaignMember/fields/Grow_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Grow_Marriage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grow Marriage</label>
    <type>Checkbox</type>
</CustomField>