force-app/main/default/objects/CampaignMember/fields/Impact_Local__c.field-meta.xml
<CustomField>
    <fullName>Impact_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact Local</label>
    <type>Checkbox</type>
</CustomField>