force-app/main/default/objects/CampaignMember/fields/Invitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Type__c</fullName>
    <inlineHelpText>How was the member invited.</inlineHelpText>
    <label>Invitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>RSVP Card</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>