force-app/main/default/objects/CampaignMember/fields/Is_Counted__c.field-meta.xml
<CustomField>
    <fullName>Is_Counted__c</fullName>
    <formula>OR(
TEXT(Status) = &quot;A - Attended&quot;,
TEXT(Status) = &quot;C - Confirmed&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Counted</label>
    <type>Checkbox</type>
</CustomField>