force-app/main/default/objects/CampaignMember/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>Text(Contact.Language_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>