force-app/main/default/objects/CampaignMember/fields/Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Date__c</fullName>
    <formula>Account_Household__r.Giving_Last_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Date</label>
    <type>Date</type>
</CustomField>