force-app/main/default/objects/CampaignMember/fields/LLYMI_Cabin_Number__c.field-meta.xml
<CustomField>
    <fullName>LLYMI_Cabin_Number__c</fullName>
    <label>LLYMI Cabin Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>