force-app/main/default/objects/CampaignMember/fields/LS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LS_Last_Name__c</fullName>
    <formula>LastName &amp;&quot;*&quot;&amp; Contact.DD_Individual_ID__c &amp;&quot;*&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LS Last Name</label>
    <type>Text</type>
</CustomField>