force-app/main/default/objects/CampaignMember/fields/Min_Rep__c.field-meta.xml
<CustomField>
    <fullName>Min_Rep__c</fullName>
    <formula>Campaign.Event_Area__r.Ministry_Rep_A__r.FirstName &amp; &quot; &quot; &amp;  Campaign.Event_Area__r.Ministry_Rep_A__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Rep</label>
    <type>Text</type>
</CustomField>