force-app/main/default/objects/CampaignMember/fields/Ministry_Group__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This replaces the lookup to groupname, and provides a way to update the Ministry Group Registration</description>
    <label>Ministry Group</label>
    <referenceTo>Ministry_Group__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>