force-app/main/default/objects/CampaignMember/fields/MinRep_A__c.field-meta.xml
<CustomField>
    <fullName>MinRep_A__c</fullName>
    <formula>Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep_A__r.FirstName &amp; &quot; &quot; &amp;  Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep_A__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MinRep A</label>
    <type>Text</type>
</CustomField>