force-app/main/default/objects/CampaignMember/fields/NMC__c.field-meta.xml
<CustomField>
    <fullName>NMC__c</fullName>
    <formula>TEXT(Contact.NMC__c)</formula>
    <label>NMC</label>
    <type>Text</type>
</CustomField>