force-app/main/default/objects/CampaignMember/fields/No_Gift__c.field-meta.xml
<CustomField>
    <fullName>No_Gift__c</fullName>
    <formula>CASE( Contact.NMC__c ,
&quot;No Gift&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>