force-app/main/default/objects/CampaignMember/fields/Past_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Past_Response_Time__c</fullName>
    <formula>IF (TODAY()- Campaign.StartDate &gt; 45, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Response Time</label>
    <type>Checkbox</type>
</CustomField>