force-app/main/default/objects/CampaignMember/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <formula>Contact.Preferred_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Phone</label>
    <type>Text</type>
</CustomField>