force-app/main/default/objects/CampaignMember/fields/Processed_Adobe__c.field-meta.xml
<CustomField>
    <fullName>Processed_Adobe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed Adobe</label>
    <type>Checkbox</type>
</CustomField>