force-app/main/default/objects/CampaignMember/fields/Recent_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Recent_Gifts__c</fullName>
    <formula>CASE( Contact.NMC__c ,
&quot;Recent&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>