force-app/main/default/objects/CampaignMember/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Will be populated by Cvent using Campaign Member Mapping</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>