force-app/main/default/objects/CampaignMember/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>