force-app/main/default/objects/CampaignMember/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>