force-app/main/default/objects/CampaignMember/fields/Registration_Week__c.field-meta.xml
<CustomField>
    <fullName>Registration_Week__c</fullName>
    <formula>IF(ISBLANK( Registration_Date__c ),NULL,(Campaign.StartDate - Registration_Date__c )/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>