force-app/main/default/objects/CampaignMember/fields/SF_Group_Leader__c.field-meta.xml
<CustomField>
    <fullName>SF_Group_Leader__c</fullName>
    <formula>Groupname__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Groupname__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Group Leader</label>
    <type>Text</type>
</CustomField>