force-app/main/default/objects/CampaignMember/fields/SS_Attendee_ID_c__c.field-meta.xml
<CustomField>
    <fullName>SS_Attendee_ID_c__c</fullName>
    <externalId>true</externalId>
    <label>SS Attendee ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>