force-app/main/default/objects/CampaignMember/fields/Substitution_Number__c.field-meta.xml
<CustomField>
    <fullName>Substitution_Number__c</fullName>
    <label>Substitution Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>