force-app/main/default/objects/CampaignMember/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <type>Date</type>
</CustomField>