force-app/main/default/objects/CampaignMember/fields/Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to MC</label>
    <type>Checkbox</type>
</CustomField>