force-app/main/default/objects/CampaignMember/fields/Sync_to_Mc_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Mc_Campaign__c</fullName>
    <formula>Campaign.Sync_MC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync To MC Campaign</label>
    <type>Checkbox</type>
</CustomField>