force-app/main/default/objects/CampaignMember/fields/Sync_to_MC_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC_Contact__c</fullName>
    <formula>Contact.Sync_to_MC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync to MC Contact</label>
    <type>Checkbox</type>
</CustomField>