force-app/main/default/objects/CampaignMember/fields/Total_O_S_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_O_S_Calls__c</fullName>
    <formula>CASE( Status ,
&quot;Msg&quot;, 1,
&quot;MsgMsg&quot;, 1,
&quot;No Attempt&quot;,1,
0)</formula>
    <label>Total O/S Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>