force-app/main/default/objects/CampaignMember/fields/UL_Completed_Calls__c.field-meta.xml
<CustomField>
    <fullName>UL_Completed_Calls__c</fullName>
    <formula>CASE( Status ,
&quot;Complete&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UL Completed Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>