force-app/main/default/objects/CampaignMember/fields/WTR_City_State__c.field-meta.xml
<CustomField>
    <fullName>WTR_City_State__c</fullName>
    <formula>Campaign.Event_City_and_State__c</formula>
    <label>WTR City/State</label>
    <type>Text</type>
</CustomField>